fixed some spacing issues

--- a/browser/style.less
+++ b/browser/style.less
@@ -37,7 +37,11 @@
 .clear {
   clear: both;
 }
-
+.issue-header {
+  a, a:visited {
+    color: white;
+  }
+}
 .assignee {
   height: 48px;
 }
